add result in update study
